Fixed the map didn't fill the specified area on Safari.

--- a/map.css
+++ b/map.css
@@ -82,5 +82,4 @@ div.tweet a:hover {
 
 div#map {
 	height: 100%;
-	margin: 0 320px 0 0;
 }
